tests/fixtures/syntax/invalid/file_subject_fixture_reference.repor
case "file subject requires a workspace path literal, not a fixture reference" {
  $ true
  assert {
    file @"out.txt" exists
  }
}
